--- a/pages/query/dayReportDetail/dayReportDetail.wxml
+++ b/pages/query/dayReportDetail/dayReportDetail.wxml
@@ -1,20 +1,20 @@
 <view class="">
-  <view class="">20161212</view>
+  <view class="">{{data.DATES}}</view>
   <view class="table-cell">
     <view class="table-cell-col"></view>
-    <view class="table-cell-col">白班</view>
+    <view class="table-cell-col">{{item.C3_375377576828}}</view>
     <view class="table-cell-col"></view>
     <view class="table-cell-col"></view>
   </view>
   <view class="table-cell">
     <view class="table-cell-col">上班</view>
-    <view class="table-cell-col">7.30</view>
+    <view class="table-cell-col">{{item.STARTTIMES == '00:00' ? '' : item.STARTTIMES}}</view>
     <view class="table-cell-col"></view>
     <view class="table-cell-col"></view>
   </view>
   <view class="table-cell">
     <view class="table-cell-col">下班</view>
-    <view class="table-cell-col">18.30</view>
+    <view class="table-cell-col">{{item.ENDTIMES == '00:00' ? '' : item.ENDTIMES}}</view>
     <view class="table-cell-col"></view>
     <view class="table-cell-col"></view>
   </view>
@@ -26,9 +26,9 @@
     <view class="table-cell-col"></view>
   </view>
   <view class="table-cell">
-    <view class="table-cell-col">8</view>
-    <view class="table-cell-col">18</view>
-    <view class="table-cell-col"></view>
+    <view class="table-cell-col">{{item.F_1}}</view>
+    <view class="table-cell-col">{{item.F_2}}</view>
+    <view class="table-cell-col">{{item.F_3}}</view>
     <view class="table-cell-col"></view>
   </view>
   <view class="">请假</view>
@@ -39,22 +39,22 @@
     <view class="table-cell-col">婚假</view>
   </view>
   <view class="table-cell">
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_14"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_15"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_23"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_18"></view>
+    <view class="table-cell-col" >{{item.F_14}}</view>
+    <view class="table-cell-col" >{{item.F_15}}</view>
+    <view class="table-cell-col" >{{item.F_23}}</view>
+    <view class="table-cell-col" >{{item.F_18}}</view>
   </view>
   <view class="table-cell">
     <view class="table-cell-col">产前假</view>
-    <view class="table-cell-col">探亲假</view>
+    <view class="table-cell-col">护理假</view>
     <view class="table-cell-col">路程假</view>
     <view class="table-cell-col">丧假</view>
   </view>
   <view class="table-cell">
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_36"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_53"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_54"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_19"></view>
+    <view class="table-cell-col" >{{item.F_36}}</view>
+    <view class="table-cell-col" >{{item.F_69}}</view>
+    <view class="table-cell-col" >{{item.F_54}}</view>
+    <view class="table-cell-col" >{{item.F_19}}</view>
   </view>
   <view class="table-cell">
     <view class="table-cell-col">工伤假</view>
@@ -63,21 +63,21 @@
     <view class="table-cell-col">哺乳假</view>
   </view>
   <view class="table-cell">
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_27"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_16"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_35"></view>
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_37"></view>
+    <view class="table-cell-col" >{{item.F_27}}</view>
+    <view class="table-cell-col" >{{item.F_16}}</view>
+    <view class="table-cell-col" >{{item.F_35}}</view>
+    <view class="table-cell-col" >{{item.F_37}}</view>
   </view>
   <view class="table-cell">
     <view class="table-cell-col">计划生育假</view>
-    <view class="table-cell-col"></view>
-    <view class="table-cell-col"></view>
-    <view class="table-cell-col"></view>
+    <view class="table-cell-col">调休</view>
+    <view class="table-cell-col">欠班</view>
+    <view class="table-cell-col">旷工</view>
   </view>
   <view class="table-cell">
-    <view class="table-cell-col" data-bind="text:selectedAppItem().F_52"></view>
-    <view class="table-cell-col"></view>
-    <view class="table-cell-col"></view>
-    <view class="table-cell-col"></view>
+    <view class="table-cell-col" >{{item.F_52}}</view>
+    <view class="table-cell-col">{{item.F_28}}</view>
+    <view class="table-cell-col">{{item.F_70}}</view>
+    <view class="table-cell-col">{{item.F_3}}</view>
   </view>
 </view>
