--- a/pages/query/dayReportDetail/dayReportDetail.wxss
+++ b/pages/query/dayReportDetail/dayReportDetail.wxss
@@ -1,15 +1,2 @@
 /* pages/query/dayReportDetail/dayReportDetail.wxss */
-.table-cell{
-    width: 100%;
-    height: 37px;
-    font-size: 0;
-}
-
-.table-cell-col{
-    display: inline-block;
-    vertical-align: top;
-    width: 25%;
-    height: 100%;
-    line-height: 37px;
-    font-size: 12px;
-}
+@import '../index.wxss'
