--- a/pages/query/monthReport/monthReport.wxml
+++ b/pages/query/monthReport/monthReport.wxml
@@ -3,107 +3,167 @@
 <import src="../common.wxml" />
 <template name="monthReport">
   <view class="table-cell">
-    <view class="table-cell-col-4">姓名</view>
-    <view class="table-cell-col-6" data-bind='text:YGNAMES'>1111111</view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">年月</view>
-    <view class="table-cell-col-6" data-bind='text:YEARMONTH'>222222</view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">入职日期</view>
-    <view class="table-cell-col-6" data-bind='text:JOINDATE'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">考勤类别</view>
-    <view class="table-cell-col-6" data-bind='text:KQTYPE'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">制度工作时数</view>
-    <view class="table-cell-col-6" data-bind='text:STWOKDAYS'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">标准时数</view>
-    <view class="table-cell-col-6" data-bind='text:STWORKHOURS'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">病假</view>
-    <view class="table-cell-col-6" data-bind='text:F_14'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">产假</view>
-    <view class="table-cell-col-6" data-bind='text:F_16'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">婚假</view>
-    <view class="table-cell-col-6" data-bind='text:F_18'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">丧假</view>
-    <view class="table-cell-col-6" data-bind='text:F_19'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">年假</view>
-    <view class="table-cell-col-6" data-bind='text:F_23'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">工伤假</view>
-    <view class="table-cell-col-6" data-bind='text:F_27'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">调休</view>
-    <view class="table-cell-col-6" data-bind='text:F_28'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">旷工</view>
-    <view class="table-cell-col-6" data-bind='text:F_3'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">产检假</view>
-    <view class="table-cell-col-6" data-bind='text:F_35'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">产前假</view>
-    <view class="table-cell-col-6" data-bind='text:F_36'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">哺乳假</view>
-    <view class="table-cell-col-6" data-bind='text:F_37'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">排班出勤</view>
-    <view class="table-cell-col-6" data-bind='text:F_39'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">漏打卡</view>
-    <view class="table-cell-col-6" data-bind='text:F_40'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">计划生育假</view>
-    <view class="table-cell-col-6" data-bind='text:F_52'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">探亲假</view>
-    <view class="table-cell-col-6" data-bind='text:F_53'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">路程假</view>
-    <view class="table-cell-col-6" data-bind='text:F_54'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">其他假</view>
-    <view class="table-cell-col-6" data-bind='text:F_55'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">护理假</view>
-    <view class="table-cell-col-6" data-bind='text:F_69'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">欠班</view>
-    <view class="table-cell-col-6" data-bind='text:F_70'></view>
-  </view>
-  <view class="table-cell">
-    <view class="table-cell-col-4">出勤时数</view>
-    <view class="table-cell-col-6" data-bind='text:F_9'></view>
-  </view>
+                        <view class="table-cell-col-4">
+                            姓名
+                        </view>
+                        <view class="table-cell-col-6">{{data.YGNAMES}}</view>
+                    </view>
+
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">
+                           年月
+                        </view>
+                        <view class="table-cell-col-6">{{data.YEARMONTH}}</view>
+                    </view>
+
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">入职日期</view>
+                        <view class="table-cell-col-6">{{data.JOINDATE}}</view>
+                    </view>
+
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">考勤类别</view>
+                        <view class="table-cell-col-6">{{data.KQTYPE}}</view>
+                    </view>
+                    
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">制度工作时数</view>
+                        <view class="table-cell-col-6">{{data.STWOKDAYS}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">标准时数</view>
+                        <view class="table-cell-col-6">{{data.STWORKHOURS}}</view>
+                    </view>
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">排班工时</view>
+                        <view class="table-cell-col-6">{{data.F_79}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">上月累计欠班</view>
+                        <view class="table-cell-col-6">{{data.F_20}}</view>
+                    </view>
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">年假</view>
+                        <view class="table-cell-col-6">{{data.F_23}}</view>
+                    </view>   
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">病假</view>
+                        <view class="table-cell-col-6">{{data.F_14}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">工伤假</view>
+                        <view class="table-cell-col-6">{{data.F_27}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">产假</view>
+                        <view class="table-cell-col-6">{{data.F_16}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">产检假</view>
+                        <view class="table-cell-col-6">{{data.F_35}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">旷工</view>
+                        <view class="table-cell-col-6">{{data.F_3}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">事假0</view>
+                        <view class="table-cell-col-6">{{data.C3_424668212115}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">事假1</view>
+                        <view class="table-cell-col-6">{{data.F_15}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">平时15</view>
+                        <view class="table-cell-col-6">{{data.F_56}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">周末加班</view>
+                        <view class="table-cell-col-6">{{data.F_11}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">平日加班</view>
+                        <view class="table-cell-col-6">{{data.C3_431863381230}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">上海无锡出差</view>
+                        <view class="table-cell-col-6">{{data.C3_431881701098}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">调休</view>
+                        <view class="table-cell-col-6">{{data.F_28}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">欠班</view>
+                        <view class="table-cell-col-6">{{data.F_70}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">路程假</view>
+                        <view class="table-cell-col-6">{{data.F_54}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">婚假</view>
+                        <view class="table-cell-col-6">{{data.F_18}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">丧假</view>
+                        <view class="table-cell-col-6">{{data.F_19}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">计划生育假</view>
+                        <view class="table-cell-col-6">{{data.F_52}}</view>
+                    </view>
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">护理假</view>
+                        <view class="table-cell-col-6">{{data.F_69}}</view>
+                    </view>
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">其他假</view>
+                        <view class="table-cell-col-6">{{data.F_55}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">未刷卡</view>
+                        <view class="table-cell-col-6">{{data.C3_427746113976}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">实际补卡次数</view>
+                        <view class="table-cell-col-6">{{data.C3_431874465038}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">补卡扣款次数</view>
+                        <view class="table-cell-col-6">{{data.C3_431874818112}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">国定加班</view>
+                        <view class="table-cell-col-6">{{data.C3_431863392840}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">中夜津贴1</view>
+                        <view class="table-cell-col-6">{{data.F_66}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">全勤津贴</view>
+                        <view class="table-cell-col-6">{{data.C3_456101596314}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">公出A</view>
+                        <view class="table-cell-col-6">{{data.C3_431881684425}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">产前假</view>
+                        <view class="table-cell-col-6">{{data.F_36}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">哺乳假</view>
+                        <view class="table-cell-col-6">{{data.F_37}}</view>
+                    </view>
+                    <view class="table-cell">
+                        <view class="table-cell-col-4">漏打卡</view>
+                        <view class="table-cell-col-6">{{data.F_40}}</view>
+                    </view>
+                     <view class="table-cell">
+                        <view class="table-cell-col-4">超出工时</view>
+                        <view class="table-cell-col-6">{{data.C3_427727611415}}</view>
+                    </view>
 </template>
