--- a/pages/index/applyDetail/applyDetail.wxml
+++ b/pages/index/applyDetail/applyDetail.wxml
@@ -40,5 +40,5 @@
 
 
 
-<template wx:if="{{!willRefuse}}" is="cell-cancel" data="{{data}}">
+<template  is="cell-cancel" data="{{data}}">
 </template>
