--- a/pages/index/applyDetail/applyDetail.wxss
+++ b/pages/index/applyDetail/applyDetail.wxss
@@ -16,8 +16,22 @@ background-image: url(../../../images/zhangzhuguan.png)
 background-image: url(../../../images/lizhuzhang.png)
 }
 
+/*审批流cell*/
+.pendend-cell{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    min-height: 28px;
+    position: relative;
+  -webkit-box-align: center;
+  -webkit-align-items:center;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
 .pended-process{
     -webkit-box-flex: 0 0 51px;
+    -webkit-flex:0 0 51px;
     flex: 0 0 51px;
     height: 51px;
     background-size: 51px 51px;
@@ -25,7 +39,13 @@ background-image: url(../../../images/lizhuzhang.png)
 }
 
 .pended-process-person{
+    -webkit-box-flex: 1 1 auto;
+    -webkit-flex:1 1 auto;
     flex: 1 1 auto;
+    text-indent: 10px;
+    line-height: 51px;
+    font-size: 14px;
+
 }
 
 .pended-state-Y{
@@ -37,20 +57,21 @@ background-image: url(../../../images/lizhuzhang.png)
 }
 
 .pended-process-state{
+    -webkit-box-flex: 0 0 20px;
+    -webkit-flex:0 0 20px;
     flex: 0 0 20px;
-    
     height: 20px;
     background-size: 20px 20px;
 }
 
 .pended-process-date{
+    -webkit-box-flex:  0 0 80px;
+    -webkit-flex: 0 0 80px;
     flex: 0 0 80px;
-    text-align: right;
     font-size: 12px;
-    line-height: 12px;
-    height: 12px;
     margin-right: 10px;
-    /*position: absolute;*/
+    margin-left: 10px;
+    text-align: center;
 }
 
 .cancel{
@@ -58,4 +79,12 @@ background-image: url(../../../images/lizhuzhang.png)
   margin-left: 10px;
   margin-bottom: 20px;
   background-color: #EE2A15;
+}
+
+.col-red-line{/*审批流红线*/
+  width: 2px;
+  height: 20px;
+  position: absolute;
+  left: 58px;
+  bottom: 0;
 }
