--- a/templates/templates.wxml
+++ b/templates/templates.wxml
@@ -54,7 +54,14 @@
 </template>
 
 <template name="loadMore">
-  <view class="load-bottom">加载更多</view>
+  <!--<view class="load-bottom">加载更多</view>-->
+  <!--<view class="weui-loadmore">
+            <view class="weui-loading"></view>
+            <view class="weui-loadmore__tips">正在加载</view>
+        </view>-->
+   <view class="weui-loadmore ">
+            <view class="weui-loadmore__tips ">加载更多</view>
+        </view>
 </template>
 
 <template name="noMore">
