--- a/pages/index/common.wxml
+++ b/pages/index/common.wxml
@@ -4,7 +4,7 @@
   <view class="main-cell-icon">
       <image src="{{item.C3_542383374989}}"  bindtap="gotoUnverifyDetailPage"><text data-item="{{item}}" class="icon-title">{{item.C3_542397132420}}</text></image>
     <image src="{{item.C3_543518801920}}" mode="aspectFit"></image>
-    <label class="font-999999">{{item.C3_533407351131}}</label>
+    <label class="font-999999">{{item.C3_533407351131 ? item.C3_533407351131 : ''}}</label>
   </view>
   <view class="main-cell-title width-calc-main">
     <label>{{item.C3_533398158705}}</label>
@@ -46,7 +46,7 @@
 <!--修改-->
 <template name="cell-modify">
   <view class="main-cell-btn">
-  <image  src="/images/xiugai.png" bindtap="draftModify" mode="aspectFit" data-item="{{item}}">        <text class="font-999999">修改</text>
+  <image  src="/images/xiugai.png" bindtap="draftModify" mode="aspectFit" data-tag="{{index}}">        <text class="font-999999">修改</text>
     </image>
   </view>
 </template>
